# iara

./: .clang-format  .clang-tidy  .clangd  .env  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  MEMORY.md  README.md  SPRINT.md  compile_commands.json  package-lock.json  package.json  quick_test.py  requirements.txt  run_dev_tests.sh  sorgan_env.sh  sorgan_spack.yaml  spack.yaml  test_cmake_generation.py  test_experiment_pipeline.sh  test_framework_integration.py  test_hashing.py  test_parameter_combinations.py  test_runners.sh  verify_task_1_4.py
experiment/: CMakeLists.txt  README.md  experiment_framework.py  generate_notebook.py  visualize_experiment.py
experiment/cholesky/: CMakeLists.txt  README.md  analyze_results.py  build.ipynb  build_metrics copy.csv  comparison.csv  measurement.csv  measurement2.csv  metadata.json  monitor_experiment.sh  notebook_config.py  plot.ipynb  results copy.csv  results.csv  run_experiment.py  run_experiment_refactored copy.py  run_experiment_refactored.py  statistics.csv  visualize_results.ipynb  visualize_results_temp.py
experiment/degridder/: analysis.ipynb  build.sh  build_instance.sh  compilation_execution.ipynb  constants.h.template  experiment.ipynb  main.cpp  main.cpp.template  preesm_outputs.txt  run_instance.sh  topology.mlir.template
experiment/degridder/Code/: CMakeLists.txt
experiment/degridder/Code/include/: common.h  common.h.pch  degridding.h  image_to_csv.h  input_grid.h
experiment/degridder/Code/src/: common.c  degridding.c  degridding2.c  image_to_csv.c  top.c
experiment/matrix-add-multiply/: Makefile  build.sh  experiment.ipynb  gen_matrices.py  generate_timing_stats.py  kernels.cpp  profile.sh  run.sh  topology.mlir.template  valgrind_profile.sh
experiment/matrix-add-multiply/instances/virtual-fifo/8x8/profile/: timing_results.csv  timing_summary.txt
iara-opt/: CMakeLists.txt  iara-opt.cpp
lib/Iara/: CMakeLists.txt  IaraDialect.cpp  IaraInterfaces.cpp  IaraOps.cpp  IaraPasses.cpp  IaraTypes.cpp
lib/Iara/Codegen/: Codegen.cpp
lib/Iara/Dialect/: ActorOp.cpp  Broadcast.cpp  Canon.cpp  DistributeGather.cpp  EdgeOp.cpp  IaraOps.cpp  IaraTypes.cpp  NodeOp.cpp
lib/Iara/Flatten/: Flatten.cpp
lib/Iara/Passes/: CollapseEdges.cpp  CollapseEdgesPass.cpp  Flatten.cpp  FlattenPass.cpp  LowerToOpenMPPass.cpp  LowerToTasksPass.cpp
lib/Iara/Passes/Canonicalize/: IaraCanonicalizePass.cpp
lib/Iara/Passes/Common/Codegen/: Codegen.cpp
lib/Iara/Passes/FIFOScheduler/: DynamicPushFirstFIFO.cpp  DynamicPushFirstFIFOSchedulerPass.cpp  OoOSchedulerPass.cpp
lib/Iara/Passes/RingBuffer/: RingBufferSchedulerPass.cpp
lib/Iara/Passes/RingBuffer/Codegen/: Codegen.cpp
lib/Iara/Passes/RingBuffer/SDF/: SDF.cpp
lib/Iara/Passes/Schedule/: BufferSizeCalculator.cpp  OpenMPScheduler.cpp  StaticDataCodegen.cpp  TaskScheduler.cpp  TotalFiringsCalculator.cpp
lib/Iara/Passes/VirtualFIFO/: BreakLoops.cpp  VirtualFIFOSchedulerPass.cpp
lib/Iara/Passes/VirtualFIFO/Codegen/: Codegen.cpp
lib/Iara/Passes/VirtualFIFO/SDF/: Analysis.cpp  BufferSizeCalculator.cpp  BufferSizeCalculatorPresburger.cpp  GenerateMemoryManagementNodes.cpp  SDF.cpp  VirtualFIFOAnalysis.cpp
lib/Iara/SDF/: Analysis.cpp  BufferSizeCalculator.cpp  Canon.cpp  GenerateMemoryManagementNodes.cpp  SDF.cpp
lib/Iara/Schedule/: OpenMPScheduler.cpp  Schedule.cpp  TaskScheduler.cpp
lib/Iara/Util/: Mlir.cpp
test/: CMakeLists.txt  cmake_install.cmake  lit.cfg.py  lit.site.cfg.py.in
test/01_hello_world/src/: topology.mlir
test/02_fifo/src/: topology.mlir
test/CAPI/: CMakeLists.txt  iara-capi-test.c
test/Iara/: 01-empty.mlir  02-single-node.mlir  03-two-nodes.c  03-two-nodes.mlir  04-multithread.cpp  04-multithread.mlir  06-broadcast.c  06-broadcast.mlir  07-ownership.mlir  50-all-features.mlir  dummy.mlir  iara-opt.mlir  iara-pass-plugin.mlir  iara-plugin.mlir  iara-translate.mlir
test/Iara/01-empty/: 01-empty.test
test/Iara/02-single-node/: 02-single-node.test
test/Iara/03-two-nodes/: 03-two-nodes.mlir  03-two-nodes.test  main.c  topology.mlir  topology.test
test/Iara/04-multithread/: 04-multithread.cpp  04-multithread.mlir  04-multithread.test  topology.test
test/Iara/05-cholesky/: 05-cholesky.mlir  05-cholesky.test  cholesky.h  codegen.sh  extra_args.sh  generate_topology.py  input.ll  input.mlir  main.c  parameters.sh  schedule.mlir  topology.mlir  topology.test  topology.test.old
test/Iara/05-cholesky-2048_2/: parameters.sh
test/Iara/05-cholesky-2048_2_sequential/: CMakeLists.txt
test/Iara/05-cholesky-2048_2_vf-omp/: CMakeLists.txt
test/Iara/05-cholesky-2048_4_sequential/: CMakeLists.txt
test/Iara/05-cholesky-2048_4_vf-omp/: CMakeLists.txt  codegen.sh
test/Iara/05.1-cholesky-10080_10_vf-omp/: parameters.sh
test/Iara/05.2-cholesky-10080_10_vf-enkits/: parameters.sh
test/Iara/05.3-cholesky-10080_10_omp-for/: parameters.sh
test/Iara/05.4-cholesky-8192_8_vf-omp/: parameters.sh
test/Iara/06-broadcast/: 06-broadcast.c  06-broadcast.test  kernels.cpp  topology.test
test/Iara/07-ownership/: 07-ownership.mlir  07-ownership.test  kernels.cpp  topology.test
test/Iara/08-SIFT/: 08-SIFT.test  CMakeLists.txt  kernels.cpp  test-setup.sh  test.sh  top.mlir  topology.dif  topology.test
test/Iara/08-SIFT/include/: ezsift-preesm.h
test/Iara/08-SIFT/src/: build_dog_pyr.c  build_gaussian_pyramid.c  build_grd_rot_pyr.c  detect_keypoint.c  extract_descriptor.c  filenames.c  img.c  io.c
test/Iara/08-sift-image_size_512_scheduler_vf-enkits/: CMakeLists.txt  codegen.sh
test/Iara/08-sift-image_size_512_scheduler_vf-omp/: CMakeLists.txt
test/Iara/09-hierarchy/: 09-hierarchy.test  main.c  topology.test
test/Iara/10-multi-rate/: kernels.cpp  topology.test
test/Iara/10-non-single-rate/: 10-non-single-rate.test
test/Iara/11-forward-delay/: kernels.cpp  topology.test
test/Iara/12-average3/: kernels.cpp  topology.test
test/Iara/13-external-io/: main.c  topology.test
test/Iara/14-scatter-gather-internal/: main.c  topology.test
test/Iara/15-scatter-gather-external/: main.c  topology.test
test/python/: smoketest.py
(+430 files in other folders)
